[package]
name = "rusm"
version = "0.1.0"
edition = "2021"
description = "An opinionated paradigm for building service-like rust crates which can be deployed together or independently."
license = "MIT OR Apache-2.0"
authors = ["Garett Cooper <garett@garettcooper.com>"]
readme = "README.md"
homepage = "https://github.com/GarettCooper/rusm"
repository = "https://github.com/GarettCooper/rusm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
